log

Thu 17 Aug 2023 08:26:10 PM UTC: 
 tests:  0|7
total_score: 0/70
b43e9bf
Thu 17 Aug 2023 08:33:06 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:16:17: error: ‘array’ undeclared (first use in this function); did you mean ‘arr’?
   16 |     if (mayor < array[i]){
      |                 ^~~~~
      |                 arr
exercises.c:16:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
00b6447
Thu 17 Aug 2023 08:33:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
f2afe13
Thu 17 Aug 2023 08:48:40 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:20: error: ‘*arrayC[0]’ may be used uninitialized [-Werror=maybe-uninitialized]
   33 |     arr[a] = arrayC[a];
      |              ~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
40bc4e3
Thu 17 Aug 2023 08:50:00 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: unused variable ‘tam2’ [-Werror=unused-variable]
   29 |   int tam2= sizeof(arrayC) / sizeof(arrayC[0]);
      |       ^~~~
exercises.c:34:20: error: ‘*arrayC[0]’ may be used uninitialized [-Werror=maybe-uninitialized]
   34 |     arr[a] = arrayC[a];
      |              ~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
d17c10d
Thu 17 Aug 2023 08:50:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e8104e4
Thu 17 Aug 2023 08:54:28 PM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c:36:1: error: expected identifier or ‘(’ before ‘}’ token
   36 | }
      | ^
Compilation failed
c3f9bc8
Thu 17 Aug 2023 08:54:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 08:54:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 08:55:30 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
67466a6
